# sitemon

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .style.yapf  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  schema.sql
sitemon/: main.py  monitor.py  records.py  settings.py  util.py
tests/: test_agent.py  test_monitor.py
