[tool.poetry]
name = "sitemon"
version = "0.1.0"
description = "A simple webiste monitoring tool"
authors = ["Nicolas Gilles <nicolas.gilles@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
sitemon = 'sitemon.main:app.main'

[tool.poetry.dependencies]
python = "^3.8"
faust = {extras = ["uvloop"], version = "^1.10.4"}
asyncpg = "^0.22.0"
httpx = "^0.16.1"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
retrying-async = "^1.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
mypy = "^0.800"
pylint = "^2.7.0"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
